-- AlterTable
ALTER TABLE "manager_player_requests" ALTER COLUMN "id" DROP DEFAULT;

-- AlterTable
ALTER TABLE "manager_stadium_requests" ALTER COLUMN "id" DROP DEFAULT;

-- AlterTable
ALTER TABLE "team_manager_requests" ALTER COLUMN "id" DROP DEFAULT;
